--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,8 @@
   volume = {6}, 
   number = {POPL}, 
   url = {https://doi.org/10.1145/3498711}, 
-  doi = {10.1145/3498711}
+  doi = {10.1145/3498711},
+  pdf = {assets/pdf/trust.pdf}
 }
 
 @article{10.1145/3498711,
