--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
   number = {POPL}, 
   url = {https://doi.org/10.1145/3498711}, 
   doi = {10.1145/3498711},
-  pdf = {assets/pdf/trust.pdf}
+  pdf = {trust.pdf}
 }
 
 @article{10.1145/3498711,
@@ -27,5 +27,6 @@
   title = {Mechanized Theory of Event Structures: A Case of Parallel Register Machine}, 
   publisher = {Proceedings of the Institute for System Programming of the RAS}, 
   doi = {https://doi.org/10.15514/ISPRAS-2021-33(3)-11},
-  url = {http://syrcose.ispras.ru/2021/submissions/SYRCoSE_2021_paper_11_15.pdf}
+  url = {http://syrcose.ispras.ru/2021/submissions/SYRCoSE_2021_paper_11_15.pdf},
+  pdf = {evstruct.pdf}
 }
