--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   title = {Truly Stateless, Optimal Dynamic Partial Order Reduction}, 
   year = {2022}, 
   issue_date = {January 2022}, 
+  journal = {POPL},
   publisher = {Association for Computing Machinery}, 
   address = {New York, NY, USA}, 
   volume = {6}, 
@@ -24,6 +25,7 @@
   bibtex_show={true},
   author = {Gladstein, Vladimir and Mikhailovsky, Dmitry and Moiseenko, Evgenii and Trunov, Anton },
   year = {2021},
+  journal = {SYRCOSE}, 
   title = {Mechanized Theory of Event Structures: A Case of Parallel Register Machine}, 
   publisher = {Proceedings of the Institute for System Programming of the RAS}, 
   doi = {https://doi.org/10.15514/ISPRAS-2021-33(3)-11},
