--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,17 @@
 
 @string{aps = {American Physical Society,}}
 
+@misc{gladshtein2024small,
+      title={Small Scale Reflection for the Working Lean User}, 
+      author={Vladimir Gladshtein and George Pîrlea and Ilya Sergey},
+      year={2024},
+      journal = {In submission},
+      eprint={2403.12733},
+      archivePrefix={arXiv},
+      primaryClass={cs.PL},
+      pdf = {leanssr.pdf}
+}
+
 @article{10.1145/3498711,
   abbr={TruSt},
   bibtex_show={true},
