--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,10 +3,36 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{lgtm,
+  abbr = {LGTM},
+  selected = {true},
+  author      = {Vladimir Gladshtein and
+                 Qiyuan Zhao and
+                 Willow Ahrens and
+                 Saman Amarasinghe and
+                 Ilya Sergey},
+  title        = {Mechanised Hypersafety Proofs about Structured Data},
+  journal   = {Proc. {ACM} Program. Lang.},
+  volume    = {8},
+  number    = {{PLDI}},
+  publisher = {ACM},
+  year      = {2024},
+  pages     = {173:1--173:24},
+  artifact  = {https://zenodo.org/doi/10.5281/zenodo.10802913},
+  pdf       = {lgtm-pldi24.pdf},
+  optwebsite   = {},
+  code      = {https://github.com/verse-lab/coq-lgtm},
+  optvideo     = {},
+  bibtex_show={true},
+  optslides    = {}
+}
+
 @misc{gladshtein2024small,
+  abbr={LeanSSR},
       title={Small Scale Reflection for the Working Lean User}, 
       author={Vladimir Gladshtein and George Pîrlea and Ilya Sergey},
       year={2024},
+      bibtex_show={true},
       journal = {In submission},
       eprint={2403.12733},
       archivePrefix={arXiv},
