--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
                  Saman Amarasinghe and
                  Ilya Sergey},
   title        = {Mechanised Hypersafety Proofs about Structured Data},
-  journal   = {Proc. {ACM} Program. Lang.},
+  journal   = {PLDI},
   volume    = {8},
   number    = {{PLDI}},
   publisher = {ACM},
