--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,13 +27,13 @@
   optslides    = {}
 }
 
-@misc{gladshtein2024small,
+@article{gladshtein2024small,
   abbr={LeanSSR},
       title={Small Scale Reflection for the Working Lean User}, 
       author={Vladimir Gladshtein and George Pîrlea and Ilya Sergey},
       year={2024},
-      bibtex_show={true},
       journal = {In submission},
+      bibtex_show={true},
       eprint={2403.12733},
       archivePrefix={arXiv},
       primaryClass={cs.PL},
